<resources>
    <string name="app_name">TaskCFT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="hello">Hello</string>
    <string name="set_date">Set date</string>
    <string name="sign_up">Sign Up</string>
</resources>